Revision history for HTML-Widget-Factory

0.04_02 2006-12-19
        allow return of individual radio widget parts
        allow per-radio-option ids

0.04_01 2006-08-17
        skip ->require on (__)?GENERATED(__)? plugin classes

0.04    2006-06-06
        implement per-factory classes

0.03    2005-12-21
        add prereqs (thanks to BSMITH for bug report)
        reenable taint mode in tests (thanks to newer M::Pluggable)
        for cumulative methods, skip classes that don't implement them

0.02    2005-11-29
        added textarea and link

0.01    2005-11-19
        first release. share and enjoy